[tool.poetry]
name = "pyhelios"
version = "0.1.0"
description = ""
authors = ["zwanto <antoine.hamon@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
influxdb-client = "^1.36.1"
python-dotenv = "^1.0.0"
requests = "^2.28.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"